# dev_cli

./: .env  Cargo.toml  README.MD
contract/aaam_factory/: aam_factory_sol.sol  aam_liquidity_token_sol.sol  aam_pool_sol.sol  erc_20_bnb.sol  erc_20_link.sol  package-lock.json  package.json
src/: lib.rs  main.rs
src/actions/: info.rs  mod.rs  sending.rs  tests.rs
src/config/: manager.rs  mod.rs  simple_config.rs
src/contract/: contract_builder.rs  contract_deployer.rs  contract_factory.rs  contract_interface.rs  example.rs  mod.rs  simple_storage.rs
src/examples/: main_example.rs  mod.rs
src/interactive/: display.rs  handler.rs  menu.rs  mod.rs  prompt.rs  state.rs
src/model/: exemple.rs  interaction.rs  mod.rs
src/universal/: auto_logger.rs  contract_spec.rs  discovery.rs  existing_contract.rs  mod.rs
tests/contracts/: SimpleStorage.abi
